# ahut-dorm-sign

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: 请求签名分析.md
migrations/: 0001_init_school_tables.sql  0001_init_tables.sql
src/: lib.rs  main.rs  observability.rs
src/application/: sampling.rs
src/constants/: apilog.rs  auth.rs  client.rs  dorm.rs  endpoints.rs  mod.rs  wechat_mp.rs
src/domain/: access_control.rs  error.rs  mod.rs  repository.rs  user.rs
src/domain/school/: checkin_flow.rs  config.rs  credential.rs  crypto.rs  gateway.rs  location.rs  mod.rs  noise.rs  policy.rs  repository.rs  session.rs  sign.rs  sign_config.rs  task.rs  task_run.rs  token.rs  user.rs
src/error/: mod.rs
src/infrastructure/: mod.rs  repository.rs
src/infrastructure/config/: env_reader.rs  mod.rs  school.rs
src/infrastructure/school/: config.rs  gateway.rs  gateway_support.rs  mod.rs  repository.rs  security.rs  week_mapper.rs
src/models/: auth.rs  dorm.rs  envelope.rs  mod.rs
src/network/: mod.rs
src/services/: apilog.rs  login.rs  mod.rs  wechat_mp.rs
src/services/dorm/: apilog.rs  list.rs  mod.rs  sign.rs  wechat_mp.rs
src/transport/: mod.rs
src/utils/: hash.rs  headers.rs  mod.rs  random.rs  serde_time.rs  sign.rs  time.rs  url.rs
tests/: .env.test.example  integration_all_sequence.rs  integration_auth_list_wechat.rs  school_checkin_e2e.rs
