[package]
name = "ahut-dorm-sign"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
md5 = "0.8.0"
base64 = "0.22.1"
derive_builder = "0.20.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
